<resources>
    <string name="app_name">知乎日报</string>
    <string name="title_home">首页</string>
    <string name="title_collection">收藏</string>
    <string name="title_setting">设置</string>
    <string name="load_error">加载失败，请检查网络后重试</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">密码</string>
    <string name="username">账户</string>
    <string name="login">登录</string>
    <string name="no_user">没有账户? 去注册</string>
    <string name="username_or_password_not_empty">用户名或者密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="have_user">已有账户? 登录</string>
    <string name="confirm_password">确认密码</string>
    <string name="registe">注册</string>
    <string name="re_password">确认密码</string>
    <string name="password_not_consistent">密码输入不一致，请重试</string>
    <string name="regiest_error">注册失败,当前用户名已被使用</string>
    <string name="login_error">登陆失败,请检查用户名密码后重试</string>
    <string name="loading">加载中</string>
    <string name="collection_success">收藏成功</string>
    <string name="prompt">提示</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="please_login">请先登录</string>
</resources>
